kube/kratos/admin-ingress.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: kratos-react-admin
  annotations:
    kubernetes.io/ingress.class: external
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: admin-kratos-react.external.rvu.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kratos-react
                port:
                  number: 4434
